# cos-cpp-sdk-v4

./: CMakeCache.txt  CMakeLists.txt  README  README.md  README.txt  config.json  cos_demo  cos_demo.cpp
include/: CosApi.h  CosConfig.h  CosDefines.h  CosSysConfig.h
include/op/: FileDownTask.h  FileOp.h
include/request/: FileDeleteReq.h  FileStatReq.h  FolderListReq.h
include/util/: threadsafe_openssl.h
lib/: BUILD
src/: Auth.cpp  BUILD  CMakeLists.txt  CosApi.cpp  CosConfig.cpp  CosSysConfig.cpp
src/op/: BUILD  BaseOp.cpp  FileDownTask.cpp  FileOp.cpp  FileUploadTask.cpp  FolderOp.cpp
src/request/: CosResult.cpp  FileDeleteReq.cpp  FileDownloadReq.cpp  FileMoveReq.cpp  FileStatReq.cpp  FileUpdateReq.cpp  FileUploadReq.cpp  FolderCreateReq.cpp  FolderDeleteReq.cpp  FolderListReq.cpp  FolderStatReq.cpp  FolderUpdateReq.cpp  ReqBase.cpp
src/util/: BUILD  CodecUtil.cpp  CodecUtilHighOpenssl.cpp  FileUtil.cpp  HttpSender.cpp  HttpUtil.cpp  Sha1.cpp  StringUtil.cpp
testdata/: asyn_test1  config.json  test1  test2
unittest/: CMakeLists.txt  Common.h  FileOpTest.cpp  FolderOpTest.cpp
